--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     color: #fff;
 }
 
-/* Header */
+/* Bagian Header */
 .header {
     background-color:rgb(231, 204, 228) ;
     padding: 5px 0;
